biv--more merging fixes for 1127 commit. . .

--- a/VE_Xplorer/Makefile
+++ b/VE_Xplorer/Makefile
@@ -33,14 +33,14 @@
 #
 #_______________________________CUSTOM OPTIONS__________________________________
 #
-# Uncomment this line if you want to build a cluster juggler app
-#CLUSTER_APP = TRUE
+# CLUSTER_APP now is defined as TRUE or FALSE from the setup script
 #_______________________________________________________________________________
 
 CONDUCTOR_BASE_DIR= ${VE_SUITE_HOME}/VE_Conductor
 
 WX_CXX = $(shell wx-config --cxxflags)
 WX_LIB = $(shell wx-config --libs)
+CFDUNAME = $(shell uname)
 
 # If OMNI_HOME was defined in the script setup.tsh, 
 # then define CORBA_DEFINES, and CORBA_INCLUDES.
@@ -50,7 +50,7 @@ ifdef OMNI_HOME
 
    CORBA_DEFINES = -D__OSVERSION__=6 
 
-   ifeq (`uname`, Linux)
+   ifeq (${CFDUNAME},Linux)
       CORBA_DEFINES += -D__x86__ -D__linux__
       OMNI_LIB = ${OMNI_HOME}/lib
    else
@@ -61,13 +61,13 @@ ifdef OMNI_HOME
    OMNILIB = -L${OMNI_LIB} -lomniORB4 -lomnithread -lomniDynamic4
    
    CORBA_INCLUDES = -I${OMNI_HOME}/include 
-   EXTRA_INCLUDES+=	-I${CONDUCTOR_BASE_DIR}/impl \
-                     -I${CONDUCTOR_BASE_DIR}/skel \
+   EXTRA_INCLUDES+= -I${CONDUCTOR_BASE_DIR}/impl \
+                    -I${CONDUCTOR_BASE_DIR}/skel \
                      ${CORBA_INCLUDES}
    EXEC_TAG =
 endif
 
-ifdef ACE_ROOT
+ifeq ($(TAO_BUILD), TRUE)
    FUTUREGEN_HOME = ${VE_SUITE_HOME}/futuregen
 
    vpath %.cxx    ${CONDUCTOR_BASE_DIR}/impl 
@@ -88,7 +88,7 @@ ifdef ACE_ROOT
    ACE_LIBS = -L${ACE_ROOT}/ace -lACE -lTAO_CosNaming -lTAO_Svc_Utils -lTAO_IORTable -lTAO_PortableServer -L${TAO_ROOT}/tao -lTAO 
 #${LDFLAGS}
    ACE_INCLUDES = -I${TAO_ROOT}/orbsvcs
-   EXTRA_INCLUDES+=	\
+   EXTRA_INCLUDES+= \
                   ${ACE_INCLUDES} \
                   -I${CONDUCTOR_BASE_DIR}/impl \
                   -I${CONDUCTOR_BASE_DIR}/skel \
@@ -100,10 +100,21 @@ ifdef ACE_ROOT
 endif
 
 ifdef XERCESCROOT
-   EXTRA_INCLUDES+=	-I${XERCESCROOT}/include
+   EXTRA_INCLUDES+= -I${XERCESCROOT}/include
    EXTRA_LIBS+= -L${XERCESCROOT}/lib -lxerces-c
 endif
 
+# 64-bit linux needs these flags
+ifeq (${CFDUNAME},Linux)
+   EXTRA_CXXFLAGS+= -m32
+   EXTRA_LIBS+= -m32
+endif
+
+# 64-bit linux needs these flags
+ifeq (${CFDUNAME},IRIX64)
+#   EXTRA_CXXFLAGS+= -m32
+   EXTRA_LIBS+= -L/usr/freeware/lib32
+endif
 #__________________________________________________________
 # list the source files that are in current directory
 SRCS=\
@@ -235,20 +246,20 @@ ifeq ($(CLUSTER_APP), TRUE)
    # builds for multiple platforms may be maintained simultaneously.
 
    #OBJDIR is the place that the object files are stored.
-   OBJDIR=	$(CFDHOSTTYPE)_cluster$(EXEC_TAG)
+   OBJDIR= $(CFDHOSTTYPE)_cluster$(EXEC_TAG)
 
    #DEPDIR is the place that the dependency files are stored.
-   DEPDIR=	$(CFDHOSTTYPE)_cluster$(EXEC_TAG)
+   DEPDIR= $(CFDHOSTTYPE)_cluster$(EXEC_TAG)
 else
    APP_NAME= $(VE_SUITE_HOME)/bin/$(CFDHOSTTYPE)/project$(EXEC_TAG)
    # object files are being stored in a system-dependent directory so that builds
    # for multiple platforms may be maintained simultaneously.
 
    #OBJDIR is the place that the object files are stored.
-   OBJDIR=	$(CFDHOSTTYPE)$(EXEC_TAG)
+   OBJDIR= $(CFDHOSTTYPE)$(EXEC_TAG)
 
    #DEPDIR is the place that the dependency files are stored.
-   DEPDIR=	$(CFDHOSTTYPE)$(EXEC_TAG)
+   DEPDIR= $(CFDHOSTTYPE)$(EXEC_TAG)
 endif
 
 default: all
@@ -265,10 +276,10 @@ all:
 #	$(MAKE) NetworkTestBean.jar
 #	-$(MAKE) install
 
-srcdir=		.
+srcdir= .
 
 # turn off dependencies for idl stuff, make clean
-NO_DEPEND=	YES
+NO_DEPEND= YES
 
 include $(VJ_BASE_DIR)/share/vrjuggler/vrj.appdefs.mk
 include $(DZR_BASE_DIR)/ext/vrjuggler/dzr.vrjuggler.pfapp.mk
@@ -280,12 +291,12 @@ include $(DZR_BASE_DIR)/ext/vrjuggler/dzr.vrjuggler.pfapp.mk
                ${CONDUCTOR_BASE_DIR}/VjObs.h 
 
 # list the cpp and h files here
-#IDL_CXX_FILES=	SliderSubject.cpp SliderSubject.h		\
-		WhiteboardSubject.cpp WhiteboardSubject.h
+#IDL_CXX_FILES= SliderSubject.cpp SliderSubject.h \
+                WhiteboardSubject.cpp WhiteboardSubject.h
 
 # list the corresponding java files that are in directory "networktest"
-#IDL_JAVA_FILES=	SliderSubject.java	\
-		WhiteboardSubject.java
+#IDL_JAVA_FILES= SliderSubject.java \
+                 WhiteboardSubject.java
 
 #JAVA_SRCS=  ObserverHolder.java \
             VjObsHolder.java \
@@ -309,54 +320,51 @@ include $(DZR_BASE_DIR)/ext/vrjuggler/dzr.vrjuggler.pfapp.mk
 #ALL_CLASSES= *.class
 #EXTRA_SOURCEPATH_DIRS= ${CONDUCTOR_BASE_DIR}/java_stuff
 #CLASSPATH= ${CONDUCTOR_BASE_DIR}/java_stuff
-#CLASSPATH_ARG=	-classpath "${CONDUCTOR_BASE_DIR}/java_stuff"
+#CLASSPATH_ARG= -classpath "${CONDUCTOR_BASE_DIR}/java_stuff"
 
 # One of these must be uncommented.
-DEBUG_APP?=		TRUE
-#OPTIM_APP?=		TRUE
+DEBUG_APP?= TRUE
+#OPTIM_APP?= TRUE
 
 #Scene Graph Specific flags
 #Can be: _PERFORMER, _OPENSG, _OSG
-EXTRA_CXXFLAGS+=	-D_PERFORMER -I${VE_SUITE_HOME}/VE_SceneGraph
+EXTRA_CXXFLAGS+= -D_PERFORMER -I${VE_SUITE_HOME}/VE_SceneGraph
 
 # vtkActorToPF needs VTK4 and VTK44
-EXTRA_CXXFLAGS+= -DVTK4 -DVTK44 $(WX_CXX) -D WXUSING_PLUGIN_DLL
+EXTRA_CXXFLAGS+= -DVTK4 -DVTK44 $(WX_CXX) -DWXUSING_PLUGIN_DLL -DWXUSINGDLL=1
 #$(EXTRA_FLAGS) 
 
-#EXTRA_DEBUG_FLAGS+=	-g -D_DEBUG -gslim 
-EXTRA_OPTIM_FLAGS+=	-O2 -OPT:Olimit=0 -D_OPT
+#EXTRA_DEBUG_FLAGS+= -g -D_DEBUG -gslim 
+EXTRA_OPTIM_FLAGS+= -O2 -OPT:Olimit=0 -D_OPT
 
 ifeq ($(TAO_BUILD), TRUE)
-   EXTRA_CXXFLAGS+=	-D_TAO ${CPPFLAGS} -I$(BOOST_INCLUDES)
+   EXTRA_CXXFLAGS+= -D_TAO ${CPPFLAGS} -I$(BOOST_INCLUDES)
    EXTRA_LIBS+= ${ACE_LIBS} $(WX_LIB)
    #$(VLDLIBS)
 else
-   EXTRA_CXXFLAGS+=	$(TWEEK_CXX_FLAGS) $(CORBA_DEFINES) -I$(BOOST_INCLUDES)
+   EXTRA_CXXFLAGS+= $(TWEEK_CXX_FLAGS) $(CORBA_DEFINES) -I$(BOOST_INCLUDES)
    EXTRA_LIBS+= $(TWEEK_LIBS) $(TWEEK_EXTRA_LIBS) $(OMNILIB) $(WX_LIB)
 endif
 
-#EXTRA_CXXFLAGS+=	$(TWEEK_CXX_FLAGS) $(CORBA_DEFINES) -I$(BOOST_INCLUDES)
-EXTRA_LIBS+= -L/usr/freeware/lib32
+LINKALL_ON= -all
+LINKALL_OFF=
 
-LINKALL_ON=		-all
-LINKALL_OFF=		
+STATIC_ON= @APP_LINK_STATIC_ON@
+STATIC_OFF= @APP_LINK_STATIC_OFF@
 
-STATIC_ON=		@APP_LINK_STATIC_ON@
-STATIC_OFF=		@APP_LINK_STATIC_OFF@
+#CLASSPATH= $(TWEEK_JARS)
 
-#CLASSPATH=		$(TWEEK_JARS)
+CXX_GEN_DIR= .
+#CXX_IDL= $(TWEEK_IDL_CXX)
+#CXX_IDL_OPTS= $(TWEEK_IDLFLAGS_CXX) \
+               $(TWEEK_IDL_GENDIR_CXX)$(CXX_GEN_DIR)
+#CXX_IDL_INCLUDES=
 
-CXX_GEN_DIR=		.
-#CXX_IDL=		$(TWEEK_IDL_CXX)
-#CXX_IDL_OPTS=		$(TWEEK_IDLFLAGS_CXX)			\
-			$(TWEEK_IDL_GENDIR_CXX)$(CXX_GEN_DIR)
-#CXX_IDL_INCLUDES=	
-
-#JAVA_GEN_DIR=		$(CONDUCTOR_BASE_DIR)/java_stuff
-#JAVA_IDL=		$(TWEEK_IDL_JAVA)
-#JAVA_IDL_OPTS=		$(TWEEK_IDLFLAGS_JAVA)			\
-			$(TWEEK_IDL_GENDIR_JAVA)$(JAVA_GEN_DIR)
-#JAVA_IDL_INCLUDES=	
+#JAVA_GEN_DIR= $(CONDUCTOR_BASE_DIR)/java_stuff
+#JAVA_IDL= $(TWEEK_IDL_JAVA)
+#JAVA_IDL_OPTS= $(TWEEK_IDLFLAGS_JAVA) \
+                $(TWEEK_IDL_GENDIR_JAVA)$(JAVA_GEN_DIR)
+#JAVA_IDL_INCLUDES=
 
 #WARN_MSG= I_AM_HERE
 #EXTRA_PATH_FOR_SOURCES= ${CONDUCTOR_BASE_DIR} \
@@ -364,8 +372,8 @@ CXX_GEN_DIR=		.
                         ${CONDUCTOR_BASE_DIR}/java_stuff/ObserverPackage \
                         ${CONDUCTOR_BASE_DIR}/java_stuff/VjObsPackage 
 
-vpath %.cpp $(CXX_GEN_DIR) ${CONDUCTOR_BASE_DIR}/skel 
-vpath %.cxx $(CXX_GEN_DIR) ${VE_SUITE_HOME}/VE_SceneGraph
+vpath %.cpp $(CXX_GEN_DIR) ${CONDUCTOR_BASE_DIR}/skel
+vpath %.cxx  ${VE_SUITE_HOME}/VE_SceneGraph
 #vpath %.cc ./UMI/skel
 #vpath %.h $(CXX_GEN_DIR)  ${CONDUCTOR_BASE_DIR}/skel
 
@@ -401,16 +409,16 @@ install:
 
 # in addition to the created *.o files and any core files, the following files will be removed during "gmake clean"
 CLEAN_FILES+= $(APP_NAME)
-#CLEAN_FILES+=	CorbaManager.o \
-      $(addprefix $(srcdir)/, $(IDL_CXX_FILES))		\
-		$(addprefix $(srcdir)/networktest/, $(IDL_JAVA_FILES))	\
+#CLEAN_FILES+= CorbaManager.o \
+      $(addprefix $(srcdir)/, $(IDL_CXX_FILES)) \
+      $(addprefix $(srcdir)/networktest/, $(IDL_JAVA_FILES)) \
       $(CONDUCTOR_BASE_DIR)/*.d \
-		$(CLASSES) tweek/*.class
+      $(CLASSES) tweek/*.class
 
 #  in addition to the "ii_files" directory, the following directories will be removed during "gmake clean"
-#CLEAN_DIRS+=	$(srcdir)/tweek
+#CLEAN_DIRS+= $(srcdir)/tweek
 
-#CLOBBER_FILES+=	NetworkTestBean.jar
+#CLOBBER_FILES+= NetworkTestBean.jar
 
 # DO NOT DELETE THIS LINE -- g++dep uses it.
 # DO NOT PUT ANYTHING AFTER THIS LINE, IT WILL GO AWAY.
