update to fix bugs related to contour planes and timing issues

--- a/VE_Xplorer/Makefile
+++ b/VE_Xplorer/Makefile
@@ -112,7 +112,7 @@ endif
 
 # 64-bit linux needs these flags
 ifeq (${CFDUNAME},IRIX64)
-#   EXTRA_CXXFLAGS+= -m32
+   EXTRA_CXXFLAGS+= -D_IRIX
    EXTRA_LIBS+= -L/usr/freeware/lib32
 endif
 #__________________________________________________________
