Edited Makefile to remove .o files from outside directories to avoid conflicts.

--- a/futuregen/Plugin/Compressor/Makefile
+++ b/futuregen/Plugin/Compressor/Makefile
@@ -14,7 +14,7 @@ THREADS = none
 EXTRA_LIBS =  
 PREFIX = /usr/local
 
-include ${XERCESCROOT}/version.incl
+#include ${XERCESCROOT}/version.incl
 include ../Makefile.incl
 
 PLUGIN = libCompressor.so
