removed BOOST_INCLUDES from EXTRA_CXXFLAGS as it is no longer needed

--- a/VE_Models/JD_Engine/CoolingGraphicalPlugin/Makefile
+++ b/VE_Models/JD_Engine/CoolingGraphicalPlugin/Makefile
@@ -121,7 +121,8 @@ DEBUG_APP?=		TRUE
 EXTRA_CXXFLAGS+=	$(WX_CXX) -D WXUSING_PLUGIN_DLL -D_PERFORMER -DVTK4 -m32 -DWXUSINGDLL=1
 #$(EXTRA_FLAGS) 
 
-EXTRA_CXXFLAGS+=	-D_TAO ${CPPFLAGS} -I$(BOOST_INCLUDES) -I${VE_SUITE_HOME}/VE_SceneGraph
+EXTRA_CXXFLAGS+= -D_TAO ${CPPFLAGS} -I${VE_SUITE_HOME}/VE_SceneGraph
+#EXTRA_CXXFLAGS+= -I$(BOOST_INCLUDES)
 EXTRA_LIBS+= -shared ${ACE_LIBS} $(WX_LIB) -m32
 
 LINKALL_ON=		-all
