removed BOOST_INCLUDES from EXTRA_CXXFLAGS as it is no longer needed

--- a/VE_Designer/Makefile
+++ b/VE_Designer/Makefile
@@ -182,11 +182,11 @@ EXTRA_INCLUDES+= -I${HOME}/software/IRIX/include
 #EXTRA_DEBUG_FLAGS+= -g -D_DEBUG -gslim 
 EXTRA_OPTIM_FLAGS+= -O2 -OPT:Olimit=0 -D_OPT
 ifeq ($(TAO_BUILD), TRUE)
-   EXTRA_CXXFLAGS+= -D_TAO ${CPPFLAGS} -I$(BOOST_INCLUDES)
+   EXTRA_CXXFLAGS+= -D_TAO ${CPPFLAGS}
    EXTRA_LIBS+= ${ACE_LIBS} 
    #$(VLDLIBS)
 else
-   EXTRA_CXXFLAGS+= $(TWEEK_CXX_FLAGS) $(CORBA_DEFINES) -I$(BOOST_INCLUDES)
+   EXTRA_CXXFLAGS+= $(TWEEK_CXX_FLAGS) $(CORBA_DEFINES)
    EXTRA_LIBS+= $(TWEEK_LIBS) $(TWEEK_EXTRA_LIBS) $(OMNILIB) 
 endif
 
