--- a/VE_Xplorer/Makefile
+++ b/VE_Xplorer/Makefile
@@ -338,11 +338,11 @@ EXTRA_CXXFLAGS+= -DVTK4 -DVTK44 $(WX_CXX) -DWXUSING_PLUGIN_DLL -DWXUSINGDLL=1
 EXTRA_OPTIM_FLAGS+= -O2 -OPT:Olimit=0 -D_OPT
 
 ifeq ($(TAO_BUILD), TRUE)
-   EXTRA_CXXFLAGS+= -D_TAO ${CPPFLAGS} -I$(BOOST_INCLUDES)
+   EXTRA_CXXFLAGS+= -D_TAO ${CPPFLAGS}
    EXTRA_LIBS+= ${ACE_LIBS} $(WX_LIB)
    #$(VLDLIBS)
 else
-   EXTRA_CXXFLAGS+= $(TWEEK_CXX_FLAGS) $(CORBA_DEFINES) -I$(BOOST_INCLUDES)
+   EXTRA_CXXFLAGS+= $(TWEEK_CXX_FLAGS) $(CORBA_DEFINES)
    EXTRA_LIBS+= $(TWEEK_LIBS) $(TWEEK_EXTRA_LIBS) $(OMNILIB) $(WX_LIB)
 endif
 
