--- a/futuregen/Executive/Makefile
+++ b/futuregen/Executive/Makefile
@@ -18,7 +18,7 @@ EXECUTIVE_HOME = ../Executive
 PLUGIN_HOME = ../Plugin
 IDL_HOME = ../IDL
 
-LDLIBS = -lTAO_CosNaming -lTAO_Svc_Utils -lTAO_IORTable -lTAO_Messaging -lTAO_PortableServer -lTAO -lxerces-c
+LDLIBS = -lTAO_CosNaming -lTAO_Svc_Utils -lTAO_IORTable -lTAO_Messaging -lTAO_PortableServer -lTAO -lTAO_BiDirGIOP -lxerces-c
 
 include $(ACE_ROOT)/include/makeinclude/wrapper_macros.GNU
 include $(TAO_ROOT)/rules.tao.GNU
