--- a/futuregen/Unit/WaterSourceUnit/Makefile
+++ b/futuregen/Unit/WaterSourceUnit/Makefile
@@ -19,7 +19,7 @@ endif # ! TAO_ROOT
 
 APP = WaterSourceUnitApp
 
-LDLIBS = -lTAO_CosNaming -lTAO_Svc_Utils -lTAO_IORTable -lTAO_Messaging -lTAO_PortableServer -lTAO
+LDLIBS = -lTAO_CosNaming -lTAO_Svc_Utils -lTAO_IORTable -lTAO_Messaging -lTAO_PortableServer -lTAO -lTAO_BiDirGIOP
 
 include $(ACE_ROOT)/include/makeinclude/wrapper_macros.GNU
 include $(TAO_ROOT)/rules.tao.GNU
