--- a/futuregen/Unit/CompressorUnit/Makefile
+++ b/futuregen/Unit/CompressorUnit/Makefile
@@ -10,7 +10,7 @@ THREADS = none
 EXTRA_LIBS =  
 PREFIX = /usr/local
 
-include ${XERCESCROOT}/version.incl
+#include ${XERCESCROOT}/version.incl
 include ../Makefile.incl
 
 ifndef TAO_ROOT
