Addition to WX_Translator. Fluent translator will be able to search a *.dat and get the Variable Names and Indexes. This is done with a parser written in Perl, the file is in ../WX_Translator/parser_file/. Naming convention will change. The parser generates a text file with the variable information, named varNamesandIndex.txt. This file name can be change if requested. This file will be deleted after it has been read. All of this ocurrs after selecting both the *.cas and *.dat file and clicking on the Load Case and Data button. After cliking the mentioned button, the Possible Variable list box should be populated. Once it's populated a click to Add All button will add all the variables to the Selected Variables list box. The use of Add button is as follow, click on the desired variables (shift + click hasn't been implemented yet) and then click the Add button.  Selected Variables list box should be populated with the selected variables. A click to Delete All should empty the Selected Variables list box. Also, the Makefile_NETL was modified. VTK_HOME and BLITZ_HOME have to be specified as environment variables.

--- a/VE_Builder/WX_Translator/Makefile_NETL
+++ b/VE_Builder/WX_Translator/Makefile_NETL
@@ -1,8 +1,8 @@
 #VTK_HOME = ../VTK/
-VTK_HOME = /.nfs/tera/modeling/bdotson/install_tests/version1.0.3/test1/VTK/
+#VTK_HOME = /.nfs/tera/modeling/bdotson/install_tests/version1.0.3/test1/VTK/
 
 #Blitz Home directory
-BLITZ_HOME = /.nfs/tera/modeling/bdotson/cfd_translator/fluent_reader.1.0.0/Blitz++-0.7
+#BLITZ_HOME = /.nfs/tera/modeling/bdotson/cfd_translator/fluent_reader.1.0.0/Blitz++-0.7
 
 VTK_INCLUDES =  -I$(VTK_HOME)Common -I$(VTK_HOME)Graphics \
 		-I$(VTK_HOME)Filtering -I$(VTK_HOME) \
@@ -22,7 +22,7 @@ FACTORY_OBJECTS = toVTK.o dump.o fluentCase.o \
 	   fluentIO.o fluentObjects.o fluentVtkFactory.o \
 	   reorder.o setOperators.o testVtkFactory.o
 
-LIBS = -lvtkParallel  -lvtkexpat \
+LIBS = -lvtkParallel -lvtkexpat \
 	 -lvtkfreetype -lvtkftgl -lvtkRendering \
 	 -lvtkGraphics -lvtkImaging -lvtkFiltering \
 	 -lvtkCommon -lvtkzlib -lvtkIO
