biv -- updating proj file to add the switch class. also made changes to get tempanimation,IHCCModel and animation to build w/ new sequence class changes

--- a/VE_Conductor/VE_Conductor.vcproj
+++ b/VE_Conductor/VE_Conductor.vcproj
@@ -247,6 +247,12 @@ echo Done.
 			</File>
 			<File
 				RelativePath="..\futuregen\Ve_ui\UI_DataSetTab.cpp">
+				<FileConfiguration
+					Name="Debug|Win32"
+					ExcludedFromBuild="TRUE">
+					<Tool
+						Name="VCCLCompilerTool"/>
+				</FileConfiguration>
 			</File>
 			<File
 				RelativePath="..\futuregen\Ve_ui\UI_DesignParTab.cpp">
@@ -268,6 +274,12 @@ echo Done.
 			</File>
 			<File
 				RelativePath="..\futuregen\Ve_ui\UI_ScalarTab.cpp">
+				<FileConfiguration
+					Name="Debug|Win32"
+					ExcludedFromBuild="TRUE">
+					<Tool
+						Name="VCCLCompilerTool"/>
+				</FileConfiguration>
 			</File>
 			<File
 				RelativePath="..\futuregen\Ve_ui\UI_SoundsTab.cpp">
