Translator no longer allows transformation as vector data stored in the pointData field won't get transformed. Transformations should be done in VE_Suite parameter file.  Translator now computes time-consuming meanCellBBLength and stores value in fieldData. createMiniFlowdata will compute meanCellBBLength if the parent dataset did not have it. dumpVerticesNotUsedByCells (cleanVtk) will now transfer meanCellBBLength stored in the field to the cleaned datatset.

--- a/VE_Builder/Translator/Makefile
+++ b/VE_Builder/Translator/Makefile
@@ -29,7 +29,8 @@ SRCS=\
    plot3dReader.cpp \
    jdMAPReader.cpp \
    enSightGoldReader.cpp \
-   ansysReader.cpp
+   ansysReader.cpp \
+   cfdAccessoryFunctions.cpp
 #   vtkEnSightFortranBinaryReader.cxx
 
 # Specify the OS-dependent directory name for object files and depends
