updates to fix bidir comm stuff and to fix the way the parameter files load data

--- a/VE_Models/JD_Engine/CoolingUnit/Makefile
+++ b/VE_Models/JD_Engine/CoolingUnit/Makefile
@@ -18,7 +18,7 @@ endif # ! TAO_ROOT
 
 APP = CoolingUnitApp
 
-LDLIBS = -lTAO_CosNaming -lTAO_Svc_Utils -lTAO_IORTable -lTAO_Messaging -lTAO_PortableServer -lTAO
+LDLIBS = -lTAO_CosNaming -lTAO_Svc_Utils -lTAO_IORTable -lTAO_Messaging -lTAO_PortableServer -lTAO -lTAO_BiDirGIOP
 
 include $(ACE_ROOT)/include/makeinclude/wrapper_macros.GNU
 include $(TAO_ROOT)/rules.tao.GNU
