initial texture based visualization classes. . .hopefully doesn't break the build

--- a/VE_Xplorer/Makefile
+++ b/VE_Xplorer/Makefile
@@ -156,6 +156,8 @@ SRCS=\
    cfdSwitch.cxx \
    cfdPolyData.cxx \
    cfdTeacher.cxx \
+   cfdTextureBasedModel.cxx \
+   cfdTextureManager.cxx \
    cfdTransientInfo.cxx \
    cfdTransientSet.cxx \
    cfdTransientFlowManager.cxx \
