fixes to get rid of 'using namespace std' this cuases problems on the irix platform. please explicitly define std namespace variables. for example std::cout, std::endl,.... This will in the long run make the code more portable

--- a/futuregen/Unit/Makefile
+++ b/futuregen/Unit/Makefile
@@ -9,6 +9,7 @@ all:
 	chmod +x end.sh
 
 clean:
+	find . -name "*.o" -exec rm {} \;
 	find . -name "*Unit" -exec echo "cd {}; make clean; cd .." > cleaning.sh \;
 	chmod +x cleaning.sh
 	./cleaning.sh
