--- a/futuregen/Framework/WinClient.vcproj
+++ b/futuregen/Framework/WinClient.vcproj
@@ -83,7 +83,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="../Plugin;./;../VE_UI/;&quot;$(WX_WIDGETS)\include&quot;;&quot;$(WX_WIDGETS)\lib\msw&quot;;&quot;$(TAO_ROOT)&quot;;&quot;$(ACE_ROOT)&quot;;&quot;$(TAO_ROOT)\orbsvcs&quot;;&quot;$(XERCESCROOT)\src&quot;;&quot;$(VE_SUITE_HOME)\VE_Xplorer&quot;;&quot;$(VE_SUITE_HOME)\VE_Conductor\skel&quot;;&quot;$(VE_SUITE_HOME)\futurgen\IDL&quot;;&quot;$VE_SUITE_HOME)\futuregen\Framework&quot;"
+				AdditionalIncludeDirectories="../Plugin;./;../VE_UI/;&quot;$(WX_HOME)\include&quot;;&quot;$(WX_HOME)\lib\mswd&quot;;&quot;$(TAO_ROOT)&quot;;&quot;$(ACE_ROOT)&quot;;&quot;$(TAO_ROOT)\orbsvcs&quot;;&quot;$(XERCESCROOT)\src&quot;;&quot;$(VE_SUITE_HOME)\VE_Xplorer&quot;;&quot;$(VE_SUITE_HOME)\VE_Conductor\skel&quot;;&quot;$(VE_SUITE_HOME)\futurgen\IDL&quot;;&quot;$VE_SUITE_HOME)\futuregen\Framework&quot;"
 				PreprocessorDefinitions="_DEBUG;WIN32;_WINDOWS;WINVER=0x400;_MT;wxUSE_GUI=1;__WXDEBUG__;WXDEBUG=1;WXUSINGDLL;_TAO"
 				IgnoreStandardIncludePath="FALSE"
 				BasicRuntimeChecks="3"
@@ -105,11 +105,11 @@
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="aced.lib TAOd.lib TAO_CosNamingd.lib TAO_PortableServerd.lib odbc32.lib odbccp32.lib comctl32.lib rpcrt4.lib wsock32.lib wxmsw24d.lib xerces-c_2D.lib"
+				AdditionalDependencies="aced.lib TAOd.lib TAO_CosNamingd.lib TAO_PortableServerd.lib TAO_BiDirGIOPd.lib odbc32.lib odbccp32.lib comctl32.lib rpcrt4.lib wsock32.lib wxmsw24d.lib xerces-c_2D.lib"
 				OutputFile=".\WinClient.exe"
 				LinkIncremental="1"
 				SuppressStartupBanner="TRUE"
-				AdditionalLibraryDirectories="&quot;$(TAO_ROOT)\tao&quot;;&quot;$(TAO_ROOT)\orbsvcs\orbsvcs&quot;;&quot;$(TAO_ROOT)\tao\PortableServer&quot;;&quot;$(WX_WIDGETS)\lib&quot;;&quot;$(ACE_ROOT)\bin&quot;;&quot;$(ACE_ROOT)\ace&quot;;&quot;$(XERCESCROOT)\Build\Win32\VC7\Debug&quot;"
+				AdditionalLibraryDirectories="&quot;$(TAO_ROOT)\tao&quot;;&quot;$(TAO_ROOT)\orbsvcs\orbsvcs&quot;;&quot;$(TAO_ROOT)\tao\BiDir_GIOP&quot;;&quot;$(TAO_ROOT)\tao\PortableServer&quot;;&quot;$(WX_HOME)\lib&quot;;&quot;$(ACE_ROOT)\bin&quot;;&quot;$(ACE_ROOT)\ace&quot;;&quot;$(XERCESCROOT)\Build\Win32\VC7\Debug&quot;"
 				GenerateDebugInformation="TRUE"
 				ProgramDatabaseFile=".\Debug/WinClient.pdb"
 				SubSystem="2"
@@ -189,6 +189,9 @@
 						BasicRuntimeChecks="3"
 						BrowseInformation="1"/>
 				</FileConfiguration>
+			</File>
+			<File
+				RelativePath="..\Plugin\FinancialDialog.cpp">
 			</File>
 			<File
 				RelativePath="Frame.cpp">
@@ -271,13 +274,13 @@
 				</FileConfiguration>
 			</File>
 			<File
-				RelativePath="..\Idl\moduleC.cpp">
+				RelativePath="..\..\VE_Conductor\skel\moduleC.cpp">
 			</File>
 			<File
-				RelativePath="..\Idl\moduleS.cpp">
+				RelativePath="..\..\VE_Conductor\skel\moduleS.cpp">
 			</File>
 			<File
-				RelativePath="..\Idl\moduleS_T.cpp">
+				RelativePath="..\..\VE_Conductor\skel\moduleS_T.cpp">
 			</File>
 			<File
 				RelativePath="Network.cpp">
@@ -684,6 +687,9 @@
 				RelativePath="Avail_Modules.h">
 			</File>
 			<File
+				RelativePath="..\Plugin\FinancialDialog.h">
+			</File>
+			<File
 				RelativePath="Frame.h">
 			</File>
 			<File
@@ -696,13 +702,13 @@
 				RelativePath="ListTable.h">
 			</File>
 			<File
-				RelativePath="..\Idl\moduleC.h">
+				RelativePath="..\..\VE_Conductor\skel\moduleC.h">
 			</File>
 			<File
-				RelativePath="..\Idl\moduleS.h">
+				RelativePath="..\..\VE_Conductor\skel\moduleS.h">
 			</File>
 			<File
-				RelativePath="..\Idl\moduleS_T.h">
+				RelativePath="..\..\VE_Conductor\skel\moduleS_T.h">
 			</File>
 			<File
 				RelativePath="Network.h">
