adding texture data classes to model and modelhandler. . .also found some bugs in scenegraph code. . .

--- a/VE_Xplorer/Makefile
+++ b/VE_Xplorer/Makefile
@@ -168,6 +168,7 @@ SRCS=\
    cfdVectorBase.cxx \
    cfdVector.cxx \
    cfdVectors.cxx \
+   cfdVolumeSliceSwitchCallback.cpp \
    cfdWriteTraverser.cxx \
    fileIO.cxx \
    readWriteVtkThings.cxx \
